k8s/base/istio/virtual-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-service
  namespace: restaurant
spec:
  hosts:
    - "*"
  gateways:
    - restaurant-gateway
  http:
    - match:
        - uri:
            prefix: /orders
        - uri:
            prefix: /health
      route:
        - destination:
            host: order-service
            port:
              number: 8001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory-service
  namespace: restaurant
spec:
  hosts:
    - "*"
  gateways:
    - restaurant-gateway
  http:
    - match:
        - uri:
            prefix: /inventory
      route:
        - destination:
            host: inventory-service
            port:
              number: 8002
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: billing-service
  namespace: restaurant
spec:
  hosts:
    - "*"
  gateways:
    - restaurant-gateway
  http:
    - match:
        - uri:
            prefix: /bills
      route:
        - destination:
            host: billing-service
            port:
              number: 8003
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reservation-service
  namespace: restaurant
spec:
  hosts:
    - "*"
  gateways:
    - restaurant-gateway
  http:
    - match:
        - uri:
            prefix: /tables
        - uri:
            prefix: /reservations
      route:
        - destination:
            host: reservation-service
            port:
              number: 8004
