k8s/base/istio/authorization-policies.yaml
# deny all traffic by default in restaurant namespace
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: restaurant
spec:
  {}
---
# allow ingress gateway to reach order-service
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-order
  namespace: restaurant
spec:
  selector:
    matchLabels:
      app: order-service
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
---
# allow ingress gateway to reach reservation-service
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-reservation
  namespace: restaurant
spec:
  selector:
    matchLabels:
      app: reservation-service
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
---
# allow ingress gateway to reach inventory-service
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-inventory
  namespace: restaurant
spec:
  selector:
    matchLabels:
      app: inventory-service
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
---
# allow ingress gateway to reach billing-service
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-billing
  namespace: restaurant
spec:
  selector:
    matchLabels:
      app: billing-service
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
---
# allow order-service to call inventory-service (saga pattern)
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order-to-inventory
  namespace: restaurant
spec:
  selector:
    matchLabels:
      app: inventory-service
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/restaurant/sa/order-service"
---
# allow order-service to call billing-service (saga pattern)
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order-to-billing
  namespace: restaurant
spec:
  selector:
    matchLabels:
      app: billing-service
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/restaurant/sa/order-service"
